# supervisorr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: readmd.md
etc/: config.toml  ls.toml  metasearch.toml  my_app.toml  supervisorr.toml
etc/app/: ls.toml  metasearch.toml  my_app.toml
src/: client.rs  config.rs  lib.rs  main.rs  platform.rs  web.rs
src/app/: ipc.rs  mod.rs  state.rs
src/client/: mod.rs
src/daemon/: ipc.rs  mod.rs  web.rs
static/: index.html
