[package]
name = "supervisorr"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["multipart"], optional = true }
clap = { version = "4.6.1", features = ["derive"] }
rust-embed = { version = "8.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
toml = "1.1.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }


[features]
default = ["web"]
web = ["dep:axum", "dep:rust-embed"]
